# agent-teams-template-implementation

./: .dockerignore  .gitignore  Dockerfile  README.md  SupervisorPrompt.txt  app.py  chatbot.py  cloudbuild.yaml  pyproject.toml
agents/: __init__.py  base_agent.py
agents/history/: SystemPrompt.txt  history_agent.py  input_models.py  toolbox.py
agents/history/tools/: __init__.py  get_history.py
agents/maths/: SystemPrompt.txt  input_models.py  maths_agent.py  toolbox.py
agents/maths/tools/: __init__.py  get_sum.py
config/: __init__.py  cloud_sql_connector.py  config.py  database.py  exceptions.py  logging.py
config/environments/: base.py  development.py  production.py
models/: chat.py  dividends.py  financials_view.py  indices.py  metrics.py  sectors.py  sentiments.py  stocks.py
services/: services.py
utils/: utils.py
