[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["M. Faraz Ali <farazaliasif786@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-core = ">=0.3.76,<0.4.0"
langgraph = ">=0.6.8,<0.7.0"
python-dotenv = ">=1.1.1,<2.0.0"
pydantic = {extras = ["email"], version = "^2.11.9"}
langgraph-checkpoint-sqlite = ">=2.0.11,<3.0.0"
langchain = "^0.3.27"
pydantic-settings = "^2.11.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
langchain-community = "^0.3.30"
fastapi = "^0.118.0"
langchain-openai = "^0.3.34"
uvicorn = "^0.37.0"
pytz = "^2025.2"
gunicorn = "^23.0.0"
langgraph-checkpoint-postgres = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"